project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_list__tests__contact_list__grouped_contacts_emails_order.snap
---
source: contacts/mail-contacts-common/src/contact_list.rs
expression: display_group(result)
---
1 keys:

B (1 item)
Contact B (#52CD96): Barbara Fox (3 addresses)
B (#2E8378): bfox@proton.me <bXXX@XXXXXXXXX>,  local_contact_id: 1, Proton address
B (#52CD96): barbara@fox.us <bXXXXXX@XXXXXX>,  local_contact_id: 1
B (#7B3185): barbara1984@yahoo.com <bXXXXXXXXXX@XXXXXXXXX>,  local_contact_id: 1
