project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_list__tests__contact_list__test_grouped_contacts_3.snap
---
source: contacts/mail-contacts-common/src/contact_list.rs
expression: display_group(groups)
---
2 keys:

🐂 (1 item)
Contact 🐂 (#4F66DF): 🐂 Barbara Lox (0 addresses)

🦊 (1 item)
Contact 🦊 (#3F8B8E): 🦊 Barbara Fox (0 addresses)
