project/mail/rust/contacts/contacts-common/src/snapshots/mail_contacts_common__contact_list__tests__contact_list__test_grouped_contacts_4.snap
---
source: contacts/mail-contacts-common/src/contact_list.rs
expression: display_group(groups)
---
2 keys:

❤️‍🔥 (1 item)
Contact ❤️‍🔥 (#4E7ABB): ❤️‍🔥 Barbara Fox (0 addresses)

🙀 (2 items)
Contact 🙀 (#7B3185): 🙀 (0 addresses)
Contact 🙀 (#4989FF): 🙀 Barbara Lox (0 addresses)
